--- a/Angular30daysMyTodoList/src/app/todo-list/todo-list.component.css
+++ b/Angular30daysMyTodoList/src/app/todo-list/todo-list.component.css
@@ -136,8 +136,8 @@
 	/* auto, since non-WebKit browsers doesn't support input styling */
 	height: auto;
 	position: absolute;
-	top: 0;
-	bottom: 0;
+	/*top: 0;*/
+	bottom: 10px;
 	margin: auto 0;
 	border: none; /* Mobile Safari */
 	-webkit-appearance: none;
